--- a/src/main/webapp/html/my.html
+++ b/src/main/webapp/html/my.html
@@ -4,16 +4,16 @@
     <script src=https://code.jquery.com/jquery-3.6.0.min.js></script>
     <link href="/css/my.css" rel="stylesheet">
 </head>
-<body onload="show_list()">
+<body onload="show_list(0)">
 <h1>RPG admin panel</h1>
 
 <label for="count_1">Count per page:</label>
 
-<select id="count_1" onchange="show_list()">
+<select id="count_1" onchange="show_list(0)">
     <option value="3">3</option>
-    <option value="3">5</option>
-    <option value="3">10</option>
-    <option value="3">20</option>
+    <option value="5">5</option>
+    <option value="10">10</option>
+    <option value="20">20</option>
 </select>
 
 <table id="table_1">
@@ -29,11 +29,26 @@
     </tr>
 </table>
 
-<div id= "paging_buttons">Pages:</div>
+<div id="paging_buttons">Pages:</div>
 
 <script>
-    function show_list() {
-        let url = '/rest/players';
+    function show_list(page_number) {
+        $('tr:has(td)').remove();
+
+        let url = '/rest/players?';
+
+        let countPerPage = $('#count_1').val();
+        if (countPerPage == null) {
+            countPerPage = 3;
+        }
+
+        url = url.concat('pageSize=').concat(countPerPage);
+
+        if (page_number == null) {
+            page_number = 0;
+        }
+        url = url.concat('&page_Number=').concat(page_number);
+
         $.get(url, function (response) {
             $.each(response, function (i, item) {
                 $('<tr>').html('<td>'
@@ -48,16 +63,25 @@
                 ).appendTo('#table_1');
             });
         });
+
         let totalCount = getTotalCount();
-        let countPerPage = $('#count_1').val();
 
-        if (countPerPage == null) {
-            countPerPage = 3;
+        let pagesCount = Math.ceil(totalCount / countPerPage);
+
+        $('button.pgn-bnt-styled').remove();
+
+        for (let i = 0; i < pagesCount; i++) {
+            let button_tag = '<button>' + (i) + '</button>';
+            let btn = $(button_tag)
+                .attr('id', 'paging_button_' + i)
+                .attr('onclick', 'show_list(' + i + ')')
+                .addClass('pgn-bnt-styled');
+            $('#paging_buttons').append(btn);
         }
-
-        let pagesCount = Math.ceil(totalCount/countPerPage);
-
     }
+
+    let identifier = '#paging_button_' + page_number;
+    $(identifier).css('color', 'red');
 
     function getTotalCount() {
         let url = '/rest/players/count';
@@ -74,7 +98,6 @@
     }
 
 </script>
-
 
 </body>
 </html>
