--- a/src/main/webapp/html/my.html
+++ b/src/main/webapp/html/my.html
@@ -47,7 +47,7 @@
         if (page_number == null) {
             page_number = 0;
         }
-        url = url.concat('&page_Number=').concat(page_number);
+        url = url.concat('&pageNumber=').concat(page_number);
 
         $.get(url, function (response) {
             $.each(response, function (i, item) {
@@ -71,17 +71,17 @@
         $('button.pgn-bnt-styled').remove();
 
         for (let i = 0; i < pagesCount; i++) {
-            let button_tag = '<button>' + (i) + '</button>';
+            let button_tag = '<button>' + (i + 1) + '</button>';
             let btn = $(button_tag)
                 .attr('id', 'paging_button_' + i)
                 .attr('onclick', 'show_list(' + i + ')')
                 .addClass('pgn-bnt-styled');
             $('#paging_buttons').append(btn);
         }
-    }
 
-    let identifier = '#paging_button_' + page_number;
-    $(identifier).css('color', 'red');
+        let identifier = '#paging_button_' + page_number;
+        $(identifier).css('color', 'red');
+    }
 
     function getTotalCount() {
         let url = '/rest/players/count';
