--- a/src/main/webapp/html/my.html
+++ b/src/main/webapp/html/my.html
@@ -26,6 +26,8 @@
         <th>Level</th>
         <th>Birthday</th>
         <th>Banned</th>
+        <th>Edit</th>
+        <th>Delete</th>
     </tr>
 </table>
 
@@ -51,16 +53,21 @@
 
         $.get(url, function (response) {
             $.each(response, function (i, item) {
-                $('<tr>').html('<td>'
-                    + item.id + '</td><td>'
-                    + item.name + '</td><td>'
-                    + item.title + '</td><td>'
-                    + item.race + '</td><td>'
-                    + item.profession + '</td><td>'
-                    + item.level + '</td><td>'
-                    + new Date(item.birthday).toLocaleDateString() + '</td><td>'
-                    + item.banned + '</td>'
-                ).appendTo('#table_1');
+                $('<tr>').html("<td>"
+                    + item.id + "</td><td>"
+                    + item.name + "</td><td>"
+                    + item.title + "</td><td>"
+                    + item.race + "</td><td>"
+                    + item.profession + "</td><td>"
+                    + item.level + "</td><td>"
+                    + new Date(item.birthday).toLocaleDateString() + "</td><td>"
+                    + item.banned + "</td><td>"
+                    + "<button id='button_edit_" + item.id + "' onclick='editAccount(" + item.id + ")'>"
+                    + "<img src='/img/edit.png'>"
+                    + "</button" + "</td><td>"
+                    + "<button id='button_delete_" + item.id + "' onclick='deleteAccount(" + item.id + ")'>"
+                    + "<img src='/img/delete.png'>"
+                    + "</button" + "</td>").appendTo("#table_1");
             });
         });
 
