--- a/src/main/webapp/html/my.html
+++ b/src/main/webapp/html/my.html
@@ -125,37 +125,103 @@
         let save_image_tag = "<img src= '/img/save.png'>";
         $(identifier_edit).html(save_image_tag);
 
-        // let current_by_parent = $(identifier_edit).parent().parent();
-        // let current_by_children = $(current_by_parent).children();
-        //
-        // let name = current_by_children[1];
-        // name.innerHTML = "<input id = 'input_name_" + id + "' type = 'text' value = '" + name.innerHTML + "'>";
-        //
-        // let title = current_by_children[2];
-        // title.innerHTML = "<input id = 'input_title_" + id + "' type = 'text' value = '" + title.innerHTML + "'>";
-        //
-        // let race = current_by_children[3];
-        // let race_id = "#select_race_" + id;
-        // let race_current_value = race.innerHTML
-        // race.innerHTML = getRaceHtml(id);
-        // $(race_id).val(race_current_value).change();
-        //
-        // let profession = current_by_children[4];
-        // let profession_id = "#select_profession_" + id;
-        // let profession_current_value = profession.innerHTML
-        // profession.innerHTML = getProfessionHtml(id);
-        // $(profession_id).val(profession_current_value).change();
-        //
-        // let banned = current_by_children[7];
-        // let banned_id = "#select_banned_" + id;
-        // let banned_current_value = banned.innerHTML
-        // banned.innerHTML = getBannedHtml(id);
-        // $(banned_id).val(banned_current_value).change();
-        //
-        // let save_tag = "saveAccount(" + id + ")";
-        // $(identifier_edit).attr('onclick',save_tag);
+        let current_by_parent = $(identifier_edit).parent().parent();
+        let children = $(current_by_parent).children();
+
+        let td_name = children[1];
+        td_name.innerHTML = "<input id = 'input_name_" + id + "' type = 'text' value = '" + td_name.innerHTML + "'>";
+
+        let td_title = children[2];
+        td_title.innerHTML = "<input id = 'input_title_" + id + "' type = 'text' value = '" + td_title.innerHTML + "'>";
+
+        let race = children[3];
+        let race_id = "#select_race_" + id;
+        let race_current_value = race.innerHTML
+        race.innerHTML = getDropDownRaceHtml(id);
+        $(race_id).val(race_current_value).change();
+
+        let td_profession = children[4];
+        let profession_id = "#select_profession_" + id;
+        let profession_current_value = td_profession.innerHTML
+        td_profession.innerHTML = getDropDownProfessionHtml(id);
+        $(profession_id).val(profession_current_value).change();
+
+        let td_banned = children[7];
+        let banned_id = "#select_banned_" + id;
+        let banned_current_value = td_banned.innerHTML
+        td_banned.innerHTML = getDropDownBannedHtml(id);
+        $(banned_id).val(banned_current_value).change();
+
+        let property_save_tag = "saveAcc(" + id + ")";
+        $(identifier_edit).attr('onclick',property_save_tag);
     }
 
+    function saveAcc(id) {
+        let value_name = $("#input_name_" + id).val();
+        let value_title = $("#input_title_" + id).val();
+        let value_race = $("#select_race_" + id).val();
+        let value_profession = $("#select_profession_" + id).val();
+        let value_banned = $("#select_banned_" + id).val();
+
+        let url = "/rest/players/" + id;
+
+        $.ajax({
+            url: url,
+            type: "POST",
+            dataType: "json",
+            contentType: "application/json; charset = UTF-8",
+            async: false,
+            data: JSON.stringify({
+                "name": value_name,
+                "title": value_title,
+                "race": value_race,
+                "profession": value_profession,
+                "banned": value_banned
+            }),
+            success: function () {
+                show_list(getCurrentPage());
+            }
+        })
+    }
+
+
+    function getDropDownRaceHtml(id) {
+        let race_id = "select_race_" + id;
+        return "<label for = 'race'></label>"
+            + "<select id = " + race_id + " name = 'race'>"
+            + "<option value='HUMAN'>HUMAN</option>"
+            + "<option value='DWARF'>DWARF</option>"
+            + "<option value='ELF'>ELF</option>"
+            + "<option value='GIANT'>GIANT</option>"
+            + "<option value='ORC'>ORC</option>"
+            + "<option value='TROLL'>TROLL</option>"
+            + "<option value='HOBBIT'>HOBBIT</option>"
+            + "</select>";
+    }
+
+    function getDropDownProfessionHtml(id) {
+        let profession_id = "select_profession_" + id;
+        return "<label for = 'race'></label>"
+            + "<select id = " + profession_id + " name = 'profession'>"
+            + "<option value='WARRIOR'>WARRIOR</option>"
+            + "<option value='ROGUE'>ROGUE</option>"
+            + "<option value='SORCERER'>SORCERER</option>"
+            + "<option value='CLERIC'>CLERIC</option>"
+            + "<option value='PALADIN'>PALADIN</option>"
+            + "<option value='NAZGUL'>NAZGUL</option>"
+            + "<option value='WARLOCK'>WARLOCK</option>"
+            + "<option value='DRUID'>DRUID</option>"
+            + "</select>";
+    }
+
+    function getDropDownBannedHtml(id) {
+        let banned_id = "select_banned_" + id;
+        return "<label for = 'banned'></label>"
+            + "<select id = " + banned_id + " name = 'banned'>"
+            + "<option value='true'>true</option>"
+            + "<option value='false'>false</option>"
+            + "</select>";
+    }
 
     function getCurrentPage(){
         let current_page = 1;
