--- a/src/main/webapp/html/my.html
+++ b/src/main/webapp/html/my.html
@@ -5,7 +5,10 @@
     <link href="/css/my.css" rel="stylesheet">
 </head>
 <body onload="show_list(0)">
+
 <h1>RPG admin panel</h1>
+
+<h2>Accounts list:</h2>
 
 <label for="count_1">Count per page:</label>
 
@@ -32,6 +35,62 @@
 </table>
 
 <div id="paging_buttons">Pages:</div>
+
+<hr>
+<h2>Create new account:</h2>
+
+<label for="input_name_new">Name:</label>
+<input type="text" id="input_name_new" name="name" required size="12" maxlength="12">
+<br>
+
+<label for="input_title_new">Title:</label>
+<input type="text" id="input_title_new" name="title" required size="30" maxlength="30">
+<br>
+
+<label for="input_race_new">Race:</label>
+<select id = "input_race_new" name = 'race'>
+    <option value='HUMAN'>HUMAN</option>
+    <option value='DWARF'>DWARF</option>
+    <option value='ELF'>ELF</option>
+    <option value='GIANT'>GIANT</option>
+    <option value='ORC'>ORC</option>
+    <option value='TROLL'>TROLL</option>
+    <option value='HOBBIT'>HOBBIT</option>
+</select>
+<br>
+
+<label for="input_profession_new">Profession:</label>
+<select id = "input_profession_new" name = 'profession'>
+    <option value='WARRIOR'>WARRIOR</option>
+    <option value='ROGUE'>ROGUE</option>
+    <option value='SORCERER'>SORCERER</option>
+    <option value='CLERIC'>CLERIC</option>
+    <option value='PALADIN'>PALADIN</option>
+    <option value='NAZGUL'>NAZGUL</option>
+    <option value='WARLOCK'>WARLOCK</option>
+    <option value='DRUID'>DRUID</option>
+</select>
+<br>
+
+<label for="input_level_new">Level:</label>
+<input type="number" id="input_level_new" name="level" min="0" max="100">
+<br>
+
+<label for="input_birthday_new">Birthday:</label>
+<input type="date" id="input_birthday_new" name="birthday" min="2000-01-01" max="3000-01-01">
+<br>
+
+<label for="input_banned_new">Banned:</label>
+<select id = "input_banned_new" name = "banned">"
+    <option value='true'>true</option>
+    <option value='false'>false</option>
+</select>
+<br><br>
+
+<span>
+    <button type="submit" onclick="createAccount()">Save</button>
+</span>
+
 
 <script>
     function show_list(page_number) {
@@ -154,6 +213,46 @@
 
         let property_save_tag = "saveAcc(" + id + ")";
         $(identifier_edit).attr('onclick',property_save_tag);
+    }
+
+    function createAccount() {
+        let value_name = $("#input_name_new").val();
+        let value_title = $("#input_title_new").val();
+        let value_race = $("#input_race_new").val();
+        let value_profession = $("#input_profession_new").val();
+        let value_level = $("#input_level_new").val();
+        let value_birthday = $("#input_birthday_new").val();
+        let value_banned = $("#input_banned_new").val();
+
+        let current_page = window.location.href;
+        let url = "/rest/players";
+
+        $.ajax({
+            url: url,
+            type: "POST",
+            dataType: "json",
+            contentType: "application/json; charset = UTF-8",
+            async: false,
+            data: JSON.stringify({
+                "name": value_name,
+                "title": value_title,
+                "race": value_race,
+                "profession": value_profession,
+                "level": value_level,
+                "birthday": new Date(value_birthday).getTime(),
+                "banned": value_banned
+            }),
+            success: function () {
+                $("#input_name_new").val("");
+                $("#input_title_new").val("");
+                $("#input_race_new").val();
+                $("#input_profession_new").val();
+                $("#input_level_new").val();
+                $("#input_birthday_new").val();
+                $("#input_banned_new").val();
+                show_list(getCurrentPage());
+            }
+        })
     }
 
     function saveAcc(id) {
